--- a/Product/Product.html
+++ b/Product/Product.html
@@ -22,54 +22,224 @@
         </div>
 
         <div class="product-grid">
-            <!-- First product (with Ad tag) -->
+            <!-- Row 1, Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/Product/AoSomi.png" alt="Áo Sơ Mi">
-                    <div class="ad-tag">Ad</div>
-                    <div class="sale-tag">25.3</div>
+                    <img src="/Product/BloomDress.png" alt="Bloom Dress">
+                    <div class="video-indicator">▶</div>
                 </div>
                 <div class="product-details">
-                    <div class="product-title">Áo Sơ Mi</div>
+                    <div class="product-title">< SALE SỐC > [ KÈM QUẦN] Bloom Dress , Đầm Babydoll trễ vai</div>
                     <div class="price-info">
-                        <div class="current-price">₫139,000</div>
-                        <div class="original-price">₫179,000</div>
+                        <div class="current-price">₫90.000</div>
                     </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>5.0
+                        </div>
+                        <div>TP. Hồ Chí Minh</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 1, Product 2 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/AoCoNo.png" alt="Váy thiết kế">
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Váy thiết kế dáng A cổ tàu phối dây nơ- Khâu đính tỉ mỉ</div>
+                    <div class="price-info">
+                        <div class="current-price">₫275.000</div>
+                        <div class="discount-percent">-47%</div>
+                    </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>5.0
+                        </div>
+                        <div>Thái Nguyên</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 1, Product 3 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/BabyDoll.png" alt="Đầm ngắn dáng babydoll">
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">/Sẵn / Đầm ngắn dáng babydoll cổ sen, váy nữ voan 2 lớp</div>
+                    <div class="price-info">
+                        <div class="current-price">₫369.000</div>
+                        <div class="discount-percent">-29%</div>
+                    </div>
+                    <div class="promotion-tag">Giảm ₫20k</div>
+                    <div class="purchase-tag">Mua để nhận quà</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>5.0
+                        </div>
+                        <div>Hà Nội</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 1, Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/VayBien.png" alt="Váy đi biển">
+                    <div class="favorite-tag">Yêu thích</div>
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Váy đi biển - Đầm maxi hở lưng Chất đũi lụa mềm thoáng mát</div>
+                    <div class="price-info">
+                        <div class="current-price">₫165.000</div>
+                        <div class="discount-percent">-48%</div>
+                    </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="purchase-tag">Mua để nhận quà</div>
                     <div class="product-meta">
                         <div class="rating">
                             <span>★</span>4.9
                         </div>
-                        <div>Đã bán 5.6k</div>
-                        <div>TP. Hồ Chí Minh</div>
+                        <div>Nam Định</div>
                     </div>
                 </div>
             </div>
 
-            <!-- Second product -->
+            <!-- Row 1, Product 5 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/Thumbail2.png" alt="Váy Họa Tiết">
-                    <div class="sale-tag">25.3</div>
-                    <div class="favorite-tag">Yêu Thích</div>
-                    <div class="shipping-tag">Ngày mai</div>
+                    <img src="/Product/BanhBeo.png" alt="Váy Bánh Bèo">
                 </div>
                 <div class="product-details">
-                    <div class="product-title">Váy Họa Tiết</div>
+                    <div class="product-title">Váy Bánh Bèo Tay Ngắn Dáng Bồng Xòe Vải Ren Cổ Tàu</div>
                     <div class="price-info">
-                        <div class="current-price">₫149,000</div>
-                        <div class="original-price">₫179,000</div>
+                        <div class="current-price">₫350.000</div>
+                        <div class="discount-percent">-22%</div>
                     </div>
                     <div class="product-meta">
                         <div class="rating">
-                            <span>★</span>4.8
+                            <span>★</span>5.0
                         </div>
-                        <div>Đã bán 14.5k</div>
+                        <div>Hà Nội</div>
+                    </div>
+                </div>
+                <button class="similar-product-btn">Tìm sản phẩm tương tự</button>
+            </div>
+
+            <!-- Row 2, Product 1 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/CupNguc.png" alt="Váy Tơ Bèo Trễ Vai">
+                    <div class="favorite-tag">Yêu thích</div>
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Váy Tơ Bèo Trễ Vai Cup Ngực Tay Loe Dáng Xoè Siêu xinh</div>
+                    <div class="price-info">
+                        <div class="current-price">₫64.900</div>
+                        <div class="discount-percent">-50%</div>
+                    </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="purchase-tag">Giảm ₫15k</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>4.7
+                        </div>
+                        <div>Thái Nguyên</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 2, Product 2 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/TreVai.png" alt="Váy áo trễ vai">
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Váy áo trễ vai voan tơ quả bí đính nơ tiểu thư bánh bèo</div>
+                    <div class="price-info">
+                        <div class="current-price">₫119.000</div>
+                        <div class="discount-percent">-50%</div>
+                    </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>4.9
+                        </div>
+                        <div>Hà Nội</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 2, Product 3 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product//polo.png" alt="đầm polo cổ bé">
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Đầm polo cổ bé</div>
+                    <div class="price-info">
+                        <div class="current-price">₫99.000</div>
+                    </div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>5.0
+                        </div>
                         <div>TP. Hồ Chí Minh</div>
                     </div>
                 </div>
             </div>
 
-            <!-- Add more product cards following the same structure -->
+            <!-- Row 2, Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/CD35.png" alt="CD35 Váy Thổ">
+                    <div class="favorite-tag">Yêu thích</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">CD35 Váy Thổ Thiếu Bèo Ren Eo Tag New 100%</div>
+                    <div class="price-info">
+                        <div class="current-price">₫275.000</div>
+                    </div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>5.0
+                        </div>
+                        <div>Thái Nguyên</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Row 2, Product 5 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="/Product/CoV.png" alt="Thời Trang Nữ">
+                    <div class="video-indicator">▶</div>
+                </div>
+                <div class="product-details">
+                    <div class="product-title">Thời Trang Nữ Cổ Chữ V Thiết Kế Tiệc Phong Cách Pháp Phối Ren</div>
+                    <div class="price-info">
+                        <div class="current-price">₫295.386</div>
+                        <div class="discount-percent">-53%</div>
+                    </div>
+                    <div class="promotion-tag">Rẻ Vô Địch</div>
+                    <div class="purchase-tag">Giảm ₫48.888k</div>
+                    <div class="product-meta">
+                        <div class="rating">
+                            <span>★</span>4.5
+                        </div>
+                        <div>Nước ngoài</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
